[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/Sprites/8.png" type="Texture" id=1]
[ext_resource path="res://resources/Scripts/Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://resources/Fonts/Metal-Slug.otf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=5]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFont" id=3]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 11
font_data = ExtResource( 3 )

[node name="Main_Menu" type="CanvasLayer"]
pause_mode = 2
scale = Vector2( 1.005, 1 )
transform = Transform2D( 1.005, 0, 0, 1, 0, 0 )
script = ExtResource( 2 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 299.0
margin_bottom = 224.0
texture = ExtResource( 1 )

[node name="s_Text" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 224.0
custom_styles/panel = SubResource( 6 )

[node name="s_version" type="Label" parent="s_Text"]
margin_left = 103.985
margin_top = 28.0
margin_right = 193.985
margin_bottom = 45.0
custom_colors/font_color = Color( 0.352941, 0.352941, 0.352941, 1 )
custom_fonts/font = SubResource( 5 )
text = "GODOT v0.1"

[node name="version" type="Label" parent="s_Text"]
margin_left = 102.99
margin_top = 27.0
margin_right = 192.99
margin_bottom = 44.0
custom_fonts/font = SubResource( 5 )
text = "GODOT v0.1"

[node name="s_ps" type="Label" parent="s_Text"]
margin_left = 101.995
margin_top = 179.0
margin_right = 200.995
margin_bottom = 196.0
custom_colors/font_color = Color( 0.352941, 0.352941, 0.352941, 1 )
custom_fonts/font = SubResource( 4 )
text = "PRESS START"

[node name="press_start" type="Label" parent="s_Text"]
margin_left = 101.0
margin_top = 178.0
margin_right = 200.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 4 )
text = "PRESS START"

[node name="transition_1" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 224.0
custom_styles/panel = SubResource( 1 )

[node name="Menu" type="Panel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 146.0
margin_bottom = 72.0
custom_styles/panel = SubResource( 2 )

[node name="classic_mode" type="Label" parent="Menu"]
margin_left = 10.0
margin_top = 4.0
margin_right = 118.0
margin_bottom = 21.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "CLASSIC MODE"

[node name="network_mode" type="Label" parent="Menu"]
margin_left = 10.0
margin_top = 18.0
margin_right = 118.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 3 )
text = "NETWORK MODE"

[node name="fps_toggle" type="Label" parent="Menu"]
margin_left = 10.0
margin_top = 32.0
margin_right = 118.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 8 )
text = "FPS: 60"

[node name="transition_2" type="Panel" parent="."]
visible = false
margin_right = 300.0
margin_bottom = 224.0
custom_styles/panel = SubResource( 1 )

[node name="CARGANDO" type="Label" parent="transition_2"]
margin_left = 8.0
margin_top = 199.0
margin_right = 129.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 7 )
text = "CARGANDO..."
